# MediaConv-mac

./: .gitignore  README.md
core/: CMakeLists.txt
core/image_converter/include/: image_converter.h
core/image_converter/src/: image_converter.cpp
core/video_converter/include/: video_converter.h
core/video_converter/src/: video_converter.cpp
gui/: gui.py
gui/test/: test-converter-funcs.py  test-image-converter.py  test-video-converter.py
gui/test/vids/: bbb_short_cropped.mkv  bbb_short_resized.mkv
gui/test_scripts/: test_converter_funcs.py
